# euler-toolbox

./: .gitignore  README.md  pyproject.toml
_tool_incorporate/: sample_dataset.py  split_ds.py
euler_toolbox/: __init__.py  __main__.py  cli.py  registry.py  types.py
euler_toolbox/tools/: __init__.py  foggify.py  sample_dataset.py  split_ds.py
euler_toolbox/tools/info/: euler_suite.json
